# Todo-App

./: .gitignore  .vercel_token  AI_CHATBOT_DEPLOYED.md  ALL-FIXED.md  ALL-FIXES-COMPLETE.md  BCRYPT_FIX.md  CHATBOT-FIXED.md  CHATBOT-NOT-FOUND-FIX.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT-SUMMARY-EMAIL-REMINDERS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_PHASE2_HF.md  EMAIL-REMINDERS-GUIDE.md  FINAL-DIAGNOSIS.md  FINAL_DEPLOYMENT_REPORT.md  FINAL_STATUS.md  FINAL_SUCCESS.md  FINAL_TEST_REPORT.md  FULLY_LIVE.md  GMAIL-SECRETS-ADDED.md  HUGGINGFACE_DEPLOYMENT.md  HUGGINGFACE_GUIDE.md  MOBILE-FIXES.md  PHASE_III_COMPLETE.md  PHASE_III_DEPLOYED.md  PHASE_III_DEPLOYMENT.md  PHASE_III_FEATURES.md  PHASE_III_QUICKSTART.md  PHASE_III_SELF_TEST.md  PLAN-EMAIL-REMINDERS.md  QUICK_DEPLOY.md  QWEN-KEY-SET.md  README.md  REAL_GORDON_MODE_COMPLETE.md  RECOVERY-STATUS.md  SECURITY_FIX_GUIDE.md  (+21 more)
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/scripts/: test_chat.py
backend/src/: main.py
backend/src/ai/: qwen_client.py
backend/src/api/: ai.py  chat.py  deps.py  todos.py
backend/src/core/: config.py
backend/src/mcp/: registry.py  server.py  tools.py
backend/src/middleware/: auth.py
backend/src/models/: conversation.py  todo.py
backend/src/repositories/: todo_repository.py
backend/src/schemas/: todo.py  user.py
backend/src/services/: ai_service.py
frontend/: next.config.js  package.json  tailwind.config.ts
history/adr/: 001-ai-chat-integration-pattern.md  002-ai-communication-data-flow.md  003-security-authentication-model.md  1-ai-chat-integration-pattern.md
phase-1/: README.md
phase-1/src/: __init__.py
phase-2/: README.md
phase-3/: README.md
phase-3/backend/: .env.example  DEPLOYMENT.md  README.md  main.py.old
phase-3/frontend/: .env.example  .eslintrc.json  README.md  next.config.js  package.json  tsconfig.json
phase-4/: .gitignore  COMPLETE-SUCCESS.md  COMPLETION-SUMMARY.md  DEPLOYMENT-SUCCESS.md  DEPLOYMENT.md  FINAL-DEPLOYMENT-REPORT.md  FINAL-STATUS.md  IMPLEMENTATION-SUMMARY.md  README.md  SECRETS-REFERENCE.md  SECURITY-GUIDE.md  SET_HF_SECRETS.md  START-HERE.md  WORK-STATUS-STOPPED.md  fix_hf_secrets.sh  set_env.py  set_hf_secret.py  set_hf_secrets.sh  set_secret.bat  set_secrets.py
phase-4/docs/: DEPLOYMENT-GUIDE.md  FINAL-DEPLOYMENT-STATUS.md  IMPLEMENTATION-STATUS.md  INSTALL-WINDOWS.md  backend-api-contract.md
phase-4/k8s/: backend-deployment.yaml  chatbot-deployment.yaml  frontend-deployment.yaml
phase-4/scripts/: docker-build.bat  docker-build.sh  docker-start.bat  docker-start.sh  docker-stop.bat  docker-stop.sh  health-check.bat  health-check.sh  helm-deploy.sh  k8s-delete.sh  k8s-deploy.bat  k8s-deploy.sh  k8s-status.bat  k8s-status.sh
phase-5/: .gitignore  CHECKLIST.md  COMPLETION_REPORT.md  FRONTEND_SUMMARY.md  PROGRESS.md  README.md  START_HERE.md  SUMMARY.md  TOMORROW.md  TOMORROW_IMPLEMENTATION_PLAN.md  US1_SUMMARY.md  docker-compose.yml  run-local.sh
phase-5/backend/: .dockerignore  Dockerfile  pytest.ini  requirements.txt  run_tests.sh
phase-5/docs/: DEPLOYMENT.md  OPERATIONS.md  PRODUCTION_DEPLOYMENT.md  websocket-demo.html
phase-5/frontend/: Dockerfile  package.json
(+359 files in other folders)
